Fix project icon height and alignment

--- a/style.scss
+++ b/style.scss
@@ -102,8 +102,9 @@ hr {
 		}
 
 		.icon {
-			width: 64px;
-			height: auto;
+			height: 64px;
+			width: auto;
+			justify-self: center;
 		}
 
 		.title {
